<resources>
    <!-- Name of the app. -->
    <string name="app_name">World News</string>

    <!-- Category name for News. -->
    <string name="category_news">News</string>

    <!-- Category name for the Sport. -->
    <string name="category_sport">Sport</string>

    <!-- Category name for Culture. -->
    <string name="category_culture">Culture</string>

    <!-- Category name for Lifestyle. -->
    <string name="category_lifestyle">Lifestyle</string>

    <!-- Category name for Technology. -->
    <string name="category_technology">Tech</string>

    <!-- Description of the image. -->
    <string name="description_of_the_news">Description of the news</string>

    <!-- Text to display in the list when there are no news stories appeared. -->
    <string name="no_news">No news found. Kindly visit again to fetch the latest news.</string>

    <!-- Error message when there is no internet connectivity. -->
    <string name="no_internet_connection">No internet connection.</string>

    <!-- No name for the author. -->
    <string name="unnamed">Unnamed</string>

    <!--Fake information-->
    <string name="title">Alexis Sánchez could be the man to restore Manchester United’s glory | Jamie Jackson</string>
    <string name="section">Sport</string>
    <string name="date">2018\-01\-21T17:57:47Z</string>
    <string name="description">At Metro Cafe, customers have been known to pay more than $100 for coffee while others pay the $1 they can afford: ‘It’s about community’</string>
    <string name="autherName">Mickel John</string>

    <string name="settings">Settings</string>
    <string name="settings_title">News Settings</string>
    <string name="dots">dots</string>

    <!--Labels-->
    <string name="order_by_newest_label">Newest</string>
    <string name="order_by_oldest_label">Oldest</string>
    <string name="order_by_relevance_label">Relevance</string>
    <!--Values-->
    <string name="order_by_newest_value" translatable="false">newest</string>
    <string name="order_by_oldest_value" translatable="false">oldest</string>
    <string name="order_by_relevance_value" translatable="false">relevance</string>

    <!-- Strings For Countries Preference -->
    <string name="country_label">Countries</string>
    <string name="country_key" translatable="false">country</string>
    <string name="country_default" translatable="false">egypt</string>

    <!-- Strings For Date Preference -->
    <string name="date_label">Order By</string>
    <string name="date_key" translatable="false">order</string>
    <string name="date_default" translatable="false">newest</string>

    <!-- Strings For Notification Preference -->
    <!-- Label for the show notification checkbox preference -->
    <string name="notification_label">Notification</string>
    <!-- Key name for storing notification in SharedPreferences -->
    <string name="notification_key" translatable="false">show_notification</string>
    <!-- Summary for Checkboxes -->
    <string name="pref_show_true">Enabled</string>
    <string name="pref_show_false">Disabled</string>

    <string name="login">login</string>

    <string name="com.twitter.sdk.android.CONSUMER_KEY">sUcO42fghjPaYHnSuXKEFUgAa</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">Ua33SS9ewEKl5YatLUnP5hDyp8R9isnT2iiVOrZBdk7CbfczLr</string>

    <string name="share">Share</string>
    <string name="sharenewsstory">shareNewsStory</string>

    <string name="charging_reminder_notification_title">Breaking News</string>
    <string name="charging_reminder_notification_body">The latest top news stories in world news. Read them as they happen around the world. Enjoy!</string>
    <string name="search">Search</string>
    <string name="world_news">World News</string>

</resources>



