<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="6dp"
    card_view:cardUseCompatPadding="true"
    card_view:elevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding">


        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorOfTitle"
            android:textSize="@dimen/textSizeOfTitle"
            tools:text="@string/title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/section_text_view"
                style="@style/section"
                tools:text="@string/section" />

            <TextView
                android:id="@+id/publicationDate_text_view"
                style="@style/date"
                tools:text="@string/date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/authorName_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginBottom"
                android:textColor="#666"
                android:textSize="@dimen/textSize"
                android:textStyle="italic|bold"
                tools:text="@string/autherName" />
        </LinearLayout>


        <ImageView
            android:id="@+id/imageOfNewsArticle_image_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/heightOfImage"
            android:contentDescription="@string/description_of_the_news"
            android:scaleType="fitXY"
            tools:src="@drawable/football" />


        <TextView
            android:id="@+id/description_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:textSize="@dimen/textSizeOfDescription"
            tools:text="@string/description" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/share"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/sharenewsstory"
                android:src="@drawable/share_black" />
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>


